<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    tools:context=".PlanListAdapter">

    <TextView
        android:id="@+id/plan_item_text"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="5dp"
        android:inputType="text"
        android:maxLines="1"
        android:gravity="center_vertical"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/plan_item_distance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/plan_item_distance"
        android:layout_width="96dp"
        android:layout_height="48dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="5dp"
        android:gravity="center_vertical|right"
        android:textSize="16sp"
        android:text="dist ft"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.98"
        app:layout_constraintStart_toEndOf="@id/plan_item_text"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>